fix the layout shift caused by inserting breaks on domcontentloaded event and fix missing mobile menu logic

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -93,7 +93,7 @@
     --bs-font-monospace: "JetBrains Mono Medium", monospace;
     --bs-font-light: "Public Sans Light", sans-serif;
     --bs-heading-font-family: "Public Sans Bold", sans-serif;
-    --bs-font-bold: "Public Sans Bold", sans-serif;
+    --bs-font-bold: "Public Sans Bold", Helvetica;
     --bs-font-regular: "Public Sans Regular", sans-serif;
     --bs-font-serif: "Source Serif Regular", serif;
     --bs-font-thin: "Public Sans Thin", sans-serif;
